--- a/package.json
+++ b/package.json
@@ -7,20 +7,29 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@reduxjs/toolkit": "^2.2.1",
+    "@testing-library/react": "^14.2.2",
+    "@types/jest": "^29.5.12",
+    "babel-jest": "^29.7.0",
     "firebase": "^10.8.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
-    "sweetalert2": "^11.10.6"
+    "sweetalert2": "^11.10.6",
+    "whatwg-fetch": "^3.6.20"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
